--- a/OWNER/owner.html
+++ b/OWNER/owner.html
@@ -18,7 +18,7 @@
 						<header>
 							<span class="avatar"><img src="./img.png" width="100" alt="" /></span>
 							<h1>Harsimran Singh</h1>
-							<p>A normal 16 years old student</p>
+							<p>A 17 years old student</p>
 						</header>
 					
 						<footer>
